tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error.stderr
error[E0275]: overflow evaluating the requirement `<Foo as FnOnce<()>>::Output == Foo`
  --> $DIR/type-alias-impl-trait-with-cycle-error.rs:6:21
   |
LL | fn crash(x: Foo) -> Foo {
   |                     ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
